--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Задание 3</title>
+    <title>Задание 1</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
@@ -20,9 +20,40 @@
 <body>
     <p><a href="index.html">На главную</a></p>
 
-    <ul id="gallery"></ul>
+    <ul id="categories">
+        <li class="item">
+            <h2>Животные</h2>
 
-    <script src="js/task3.js" type="module"></script>
+            <ul>
+                <li>Кот</li>
+                <li>Хомяк</li>
+                <li>Лошадь</li>
+                <li>Попугай</li>
+            </ul>
+        </li>
+        <li class="item">
+            <h2>Продукты</h2>
+
+            <ul>
+                <li>Хлеб</li>
+                <li>Петрушка</li>
+                <li>Творог</li>
+            </ul>
+        </li>
+        <li class="item">
+            <h2>Технологии</h2>
+
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Node</li>
+            </ul>
+        </li>
+    </ul>
+
+    <script src="js/task1.js" type="module"></script>
 </body>
 
 </html>
